# ScramblerApp

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  requirements.txt  setup.cfg  setup.py
config/: config-example.txt  config.json
src/scrambler/: __init__.py
src/scrambler/utils/: commoncmd.py  configurations.py
src/scrambler_app/: __init__.py  handler.py  scrambler.py
src/scrambler_app/gui/: encryptiongui.py
src/scrambler_app/utils/: commoncmd.py  configparser.py  dircrawler.py  filemodder.py  instance.py
src/scramblerapp/: __init__.py  __main__.py  main.py  scrambler.py
src/scramblerapp/dircrawler/: configloader.py  crawler.py  datamodder.py  filemodder.py  instance.py  read.py
src/scramblerapp/gui/: encryptiongui.py  instance.py  stashgui.py
src/scramblerapp/utils/: commoncmd.py  configparser.py  dircrawler.py  encryption.py  filemodder.py
test/: test_client.py  test_main.py
