[metadata]
name = ScramblerApp
version = 0.1.1
author = Arctic
author_email = arctic.technology.mail@gmail.com
license = MIT
description = Encrypt and/or obfuscate messages, files, and data.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cryptography, encryption, security
url = https://github.com/ArcticTechnology/ScramblerApp
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	Intended Audience :: Financial and Insurance Industry
	Topic :: Security
	Topic :: Security :: Cryptography

[options]
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	ScramblerApp = scramblerapp.main:main

[options.data_files]
ScramblerApp/config = config/.config-template
